--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-ab473280-38b6-4b6c-965a-0a4f8b1a0baf;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
